--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>CISC_3610 - Musa Abdelrazaq</title>
 
-<canvas id="canvas" width="300" height="300"></canvas>
+  </head>
+  <body>
+    <canvas id="canvas" width="300" height="300"></canvas>
+    
+    <script src="cartoon.js"></script>
+  </body>
+</html>
+    
