--- a/Animation/Animation.html
+++ b/Animation/Animation.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Panda Walking Animation</title>
+    <link rel="stylesheet" href = "Moving.css">
+    <script src="cartoon.js"></script>
+</head>
+  <body>
+    <a href="#" onclick="play()">
+      <audio id="audio" src="https://git.io/JUW4q" loop="loop"></audio>
+      <script>
+	function play() {
+            var audio = document.getElementById("audio");
+            audio.play();
+	}
+      </script>	
+      <div id="panda"></div>
+      <div id="street"></div>
+    </a>
+    <h1 class="animate backwards">The Animated Title</h1>
+    <h1 class="animate forwards">The Animated Title</h1>
+    <h1 class="animate mixed">The Animated Title </h1>
+  </body>
+</html>
