--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Panda Walking Animation</title>
-    <link rel="stylesheet" href = "Moving.css">
-    <script src="cartoon.js"></script>
+    <link rel="stylesheet" href = "Animation/Moving.css">
+    <script src="Animation/cartoon.js"></script>
 </head>
   <body>
     <a href="#" onclick="play()">
