--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Panda Walking Animation</title>
-    <link rel="stylesheet" href = "Animation/Moving.css">
-    <script src="Animation/cartoon.js"></script>
-</head>
-  <body>
-    <a href="#" onclick="play()">
-      <audio id="audio" src="https://git.io/JUW4q" loop="loop"></audio>
-      <script>
-	function play() {
-            var audio = document.getElementById("audio");
-            audio.play();
-	}
-      </script>	
-      <div id="panda"></div>
-      <div id="street"></div>
-    </a>
-    <h1 class="animate backwards">The Animated Title</h1>
-    <h1 class="animate forwards">The Animated Title</h1>
-    <h1 class="animate mixed">The Animated Title </h1>
+	<head>
+	<meta charset="utf-8">
+	<title>Portfolio - Musa Abdelrazaq</title>
+	</head>
+  	<body>
+		<h1>Here are the assignments</h1>
+		<a href="Animation.html">Animation Project</a>
+    
   </body>
 </html>
     
