--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
   	<body>
 		<h1>Here are the assignments</h1>
-		<a href="Animation.html">Animation Project</a>
+		<a href="Animation/Animation.html">Animation Project</a>
     
   </body>
 </html>
