--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Portfolio - Musa Abdelrazaq</title>
 	</head>
   	<body>
-		<h1>Here are the assignments</h1>
+		<h1>CISC_3610 Portfolio - Musa Abdelrazaq</h1>
+		<p class="welcome">Welcome to my online portfolio. Here are my assignments.</p>
 		<a href="Animation/Animation.html">Animation Project</a>
-    
-  </body>
+ 	</body>
 </html>
     
