--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<h1>CISC_3610 Portfolio - Musa Abdelrazaq</h1>
 		<p class="welcome">Welcome to my online portfolio. Here are my assignments.</p>
 		<a href="Animation/Animation.html">Animation Project</a>
+		<a href="Text/text_form.html">Text_Form Project</a>
  	</body>
 </html>
     
