--- a/Text/text_form.html
+++ b/Text/text_form.html
@@ -21,8 +21,8 @@
       <label for="font">Arial</label>
       <input type="radio" id="font2" name="font" value="Times New Roman">
       <label for="font">Times New Roman</label>
-      <input type="radio" id="font3" name="font" value="Courier New">
-      <label for="font">Courier New</label><br><br>
+      <input type="radio" id="font3" name="font" value="Brush Script MT">
+      <label for="font">Brush Script MT</label><br><br>
       <input type="submit" value="Submit">
       <input type="reset" value="Reset" id="reset">
     </form>
