--- a/Animation/Animation.html
+++ b/Animation/Animation.html
@@ -3,7 +3,7 @@
   <head>
     <title>Panda Walking Animation</title>
     <link rel="stylesheet" href = "Moving.css">
-    <script src="cartoon.js"></script>
+    <script src="frame_time.js"></script>
 </head>
   <body>
     <a href="#" onclick="play()">
