--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<p class="welcome">Welcome to my online portfolio. Here are my assignments.</p>
 		<a href="Animation/Animation.html">Animation Project</a>
 		<a href="Text/text_form.html">Text_Form Project</a>
- 	</body>
+		<a href="Visuals/Data.html">Data Project</a>
+	</body>
 </html>
     
