--- a/Fruits/fruit_chart.html
+++ b/Fruits/fruit_chart.html
@@ -1,1 +1,67 @@
-
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Charts</title>
+  </head>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
+  <body>
+    <canvas id="chart" width="900" height="400"></canvas>
+    <script type="text/javascript">
+      var fruit = [
+	  {name:"Strawberry", quantity:15, color:"red"},
+	  {name:"Peach", quantity:10, color:"pink"},
+	  {name:"Banana", quantity:25, color:"yellow"},
+	  {name:"Pear", quantity:10, color:"green"},
+	  {name:"Grapes", quantity:20, color:"purple"}
+      ];
+      const names = [];
+      const datas = [];
+      const colors = [];
+      for(let i=0;i<fruit.length;i++) {
+	  names.push(fruit[i].name);
+	  datas.push(fruit[i].quantity);
+	  colors.push(fruit[i].color);
+      }
+      var ctx = document.getElementById("chart");
+      var data = {
+	  labels: names,
+	  datasets: [{
+	      label: 'Fruits',
+	      data: datas,
+	      backgroundColor: colors}]
+      }
+      var myChart = new Chart(ctx, {
+	  type: 'bar',
+	  data: data,
+	  options: {
+	      "hover": {
+		  "animationDuration": 0
+	      },
+	      "animation": {
+		  "duration": 1,
+		  "onComplete": function() {
+		      var chartInstance = this.chart,
+			  ctx = chartInstance.ctx;
+		      ctx.textAlign = 'center';
+		      ctx.font = "20px Tahoma";
+		      ctx.textBaseline = 'bottom';
+		      ctx.fillStyle = 'black';
+		      this.data.datasets.forEach(function(dataset, i) {
+			  var meta = chartInstance.controller.getDatasetMeta(i);
+			  meta.data.forEach(function(bar, index) {
+			      var data = dataset.data[index];
+			      ctx.fillText(data, bar._model.x, bar._model.y + 30);
+			  });
+		      });
+		  }},
+	      scales: {
+		  yAxes: [{
+		      ticks: {
+			  beginAtZero: true
+		      }
+		  }]
+	      }}
+      });
+    </script>
+  </body>
+</html>
