--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<a href="Text/text_form.html">Text_Form Project</a>
 		<a href="Visuals/Data.html">Data Project</a>
 		<a href="Fruits/fruit_chart.html">Fruits Project</a>
-		<a href="Catoon/solar.html">Cartoon Project</a>
+		<a href="Cartoon/solar.html">Cartoon Project</a>
 	</body>
 </html>
     
