--- a/Cartoon/solar.html
+++ b/Cartoon/solar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Charts</title>
+    <title>Cartoon</title>
   </head>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
   <body>
