--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<a href="Animation/Animation.html">Animation Project</a>
 		<a href="Text/text_form.html">Text_Form Project</a>
 		<a href="Visuals/Data.html">Data Project</a>
-		<a href="Fruits/fruit_chart.html">Fruits Project</a>
+		<a href="Fruits/fruit_chart.html">Fruits Lab</a>
 		<a href="Cartoon/solar.html">Cartoon Project</a>
 	</body>
 </html>
