--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<a href="Visuals/Data.html">Data Project</a>
 		<a href="Fruits/fruit_chart.html">Fruits Lab</a>
 		<a href="Cartoon/solar.html">Cartoon Project</a>
+		<a href="Voice/speech.html">Voice_Recognition Project</a>
 	</body>
 </html>
     
