--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   	<body>
 		<h1>CISC_3610 Portfolio - Musa Abdelrazaq</h1>
 		<p class="welcome">Welcome to my online portfolio. Here are my assignments.</p>
-		<a href="Animation/Animation.html">Animation Project</a>
-		<a href="Text/text_form.html">Text_Form Project</a>
-		<a href="Visuals/Data.html">Data Project</a>
-		<a href="Fruits/fruit_chart.html">Fruits Lab</a>
-		<a href="Cartoon/solar.html">Cartoon Project</a>
-		<a href="Voice/speech.html">Voice_Recognition Project</a>
+		<ul>
+		<li><a href="Animation/Animation.html">Animation Project</a></li>
+		<li><a href="Text/text_form.html">Text_Form Project</a></li>
+		<li><a href="Visuals/Data.html">Data Project</a></li>
+		<li><a href="Fruits/fruit_chart.html">Fruits Lab</a></li>
+		<li><a href="Cartoon/solar.html">Cartoon Project</a></li>
+		<li><a href="Voice/speech.html">Voice_Recognition Project</a></li>
+		</ul>
 	</body>
 </html>
     
