--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<h1>CISC_3610 Portfolio - Musa Abdelrazaq</h1>
 		<p class="welcome">Welcome to my online portfolio. Here are my assignments.</p>
 		<ul>
-		<li><a href="Cartoon/solar.html">Animation Project</a></li>
-		<li><a href="Fruits/fruit_chart.html">Text_Form Project</a></li>
-		<li><a href="Animation/Animation.html">Data Project</a></li>
-		<li><a href="Text/text_form.html">Fruits Lab</a></li>
-		<li><a href="Voice/speech.html">Cartoon Project</a></li>
-		<li><a href="Visuals/Data.html">Voice_Recognition Project</a></li>
+		<li><a href="Cartoon/solar.html">Cartoon Project</a></li>
+		<li><a href="Fruits/fruit_chart.html">Fruits Lab</a></li>
+		<li><a href="Animation/Animation.html">Animation Project</a></li>
+		<li><a href="Text/text_form.html">Text_Form Project</a></li>
+		<li><a href="Voice/speech.html">Voice_Recogintion Project</a></li>
+		<li><a href="Visuals/Data.html">Dat_Visualization Project Project</a></li>
 		</ul>
 	</body>
 </html>
